Switch JVM args to ZGC — recommended by Distant Horizons for smoother FPS